"refactoring plus added interview programs"